--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<footer class="footer">
 				<section class="container">
 					<hr/>
-					<p>Status page hosted by GitHub</p>
+					<p>Please report any issues to helpdesk@healthbankapp.com</p>
 				</section>
 			</footer>
 
