--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<hr/>
 
 						<span class="title">Regular maintenance</span>
-						<p>We are working on regular maintenance. The outage will last less just for a few minutes.</p>
+						<p>We are working on regular maintenance. The outage will last last for a few minutes.</p>
 
 						
 					</div>
